tests/e2e/type_assignment_invalid.error
Error: syntax error in story at line 1

1|    int a = []
      ^^^^^^^^^^

E0126: Type casting not supported from `List[any]` to `int`.
